--- a/index.html
+++ b/index.html
@@ -5,23 +5,27 @@
     <title>Yufei Rusume</title>
 </head>
 <body>
-<div class="topNavBar">
-    <img src="#" alt="Navigator image">
-    <nav>
-        <ul>
-            <li><a href="#">ABOUT</a></li>
-            <li><a href="#">SKILLS</a></li>
-            <li><a href="#">PROTFOLIO</a></li>
-            <li><a href="#">EXPERIENCE</a></li>
-            <li><a href="#">PRICING</a></li>
-            <li><a href="#">BLOG</a></li>
-            <li><a href="#">CALENDAR</a></li>
-            <li><a href="#">CONTACT</a></li>
-            <li><a href="#">OTHER</a></li>
-        </ul>
-    </nav>
-</div>
-<div class="banner" style="background-image: url(#)"> </div>
+<header>
+    <div class="topNavBar">
+        <img src="#" alt="Navigator image">
+        <nav>
+            <ul>
+                <li><a href="#">ABOUT</a></li>
+                <li><a href="#">SKILLS</a></li>
+                <li><a href="#">PROTFOLIO</a></li>
+                <li><a href="#">EXPERIENCE</a></li>
+                <li><a href="#">PRICING</a></li>
+                <li><a href="#">BLOG</a></li>
+                <li><a href="#">CALENDAR</a></li>
+                <li><a href="#">CONTACT</a></li>
+                <li><a href="#">OTHER</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
+
+
+<div class="banner" style="background-image: url(#)"></div>
 <main>
     <div class="picture">
         <img src="#" alt="profile picture">
@@ -62,5 +66,33 @@
         <p>HELLO, I AM YUFEI , A BEGGINER</p>
     </div>
 </main>
+
+<section class="professionalSkill">
+    <h1>Professional Skills</h1>
+    <ul>
+        <li>HTML&CSS</li>
+        <li>JAVASCRIPT</li>
+        <li>JAVA&PYTHON</li>
+        <li>MYSQL</li>
+        <li>MACHINE LEARNING</li>
+        <li>HTTP</li>
+    </ul>
+</section>
+
+<section class="Project">
+    <h1>Projects</h1>
+    <nav>
+        <ul>
+            <li>ALL</li>
+            <li>VUE</li>
+            <li>JS&CSS</li>
+        </ul>
+    </nav>
+    <div class="all">
+        <div class="P1"></div>
+        <div class="P2"></div>
+        <div class="P3"></div>
+    </div>
+</section>
 </body>
 </html>
