--- a/index.html
+++ b/index.html
@@ -2,49 +2,51 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="css/index.css" rel="stylesheet">
     <title>Yufei Rusume</title>
 </head>
 <body>
 <header>
-    <div class="topNavBar">
-        <img src="#" alt="Navigator image">
-        <nav>
-            <ul>
-                <li><a href="#">ABOUT</a></li>
-                <li><a href="#">SKILLS</a></li>
-                <li><a href="#">PROTFOLIO</a></li>
-                <li><a href="#">EXPERIENCE</a></li>
-                <li><a href="#">PRICING</a></li>
-                <li><a href="#">BLOG</a></li>
-                <li><a href="#">CALENDAR</a></li>
-                <li><a href="#">CONTACT</a></li>
-                <li><a href="#">OTHER</a></li>
+    <div class="topBar">
+        <a class="logo" style="float:left;">
+            <b><span id="topSpan1">Yufei</span><span id="topSpan2" style="padding-left: 3px">Page</span></b>
+        </a>
+        <nav style="float:right;" class="topNavBar">
+            <ul class="clearfix">
+                <li><a href="#">关于</a></li>
+                <li><a href="#">技能</a></li>
+                <li><a href="#">作品</a></li>
+                <li><a href="#">博客</a></li>
+                <li><a href="#">日历</a></li>
+                <li><a href="#">联系方式</a></li>
+                <li><a href="#">其他</a></li>
             </ul>
         </nav>
     </div>
 </header>
 
-
 <div class="banner" style="background-image: url(#)"></div>
 <main>
-    <div class="picture">
-        <img src="#" alt="profile picture">
-    </div>
-    <div class="profile">
-        <span>Hello</span>
-        <h1> I am Yufei Chen</h1>
-        <h2>Developer and Gamer</h2>
-        <hr>
-        <dl>
-            <dt>AGE</dt>
-            <dd>26</dd>
-            <dt>ADDRESS</dt>
-            <dd>GLASGOW</dd>
-            <dt>E-MAIL</dt>
-            <dd>EFIECHAN@OUTLOOK.COM</dd>
-            <dt>PHONE</dt>
-            <dd>123456</dd>
-        </dl>
+    <div class="profileCard">
+        <div class="picture">
+            <img src="#" alt="profile picture">
+        </div>
+        <div class="profile">
+            <span>Hello</span>
+            <h1> I am Yufei Chen</h1>
+            <h2>Developer and Gamer</h2>
+            <hr>
+            <dl>
+                <dt>AGE</dt>
+                <dd>26</dd>
+                <dt>ADDRESS</dt>
+                <dd>GLASGOW</dd>
+                <dt>E-MAIL</dt>
+                <dd>EFIECHAN@OUTLOOK.COM</dd>
+                <dt>PHONE</dt>
+                <dd>123456</dd>
+            </dl>
+        </div>
     </div>
     <footer>
         <ul>
