--- a/test.html
+++ b/test.html
@@ -5,7 +5,7 @@
     <title>TestHTML</title>
 </head>
 <body>
-<div style="font-size: 14px; height: 30px;">
+<div>
     <span>sdfjlsdjflsjfjs;afjasfjs</span>
 </div>
 </body>
