add topbar animation

--- a/test.html
+++ b/test.html
@@ -6,17 +6,10 @@
     <link rel="stylesheet" href="test.css">
 </head>
 <body>
-<div class="banner">
-    <dl class="clearfix">
-        <dt>年龄</dt>
-        <dd>26</dd>
-        <dt>地址</dt>
-        <dd>GLASGOW</dd>
-        <dt>E-MAIL</dt>
-        <dd><a href="mailto:efiechan@outlook.com" style="color: inherit">efiechan@outlook.com</a></dd>
-        <dt>QQ</dt>
-        <dd>279459476</dd>
-    </dl>
+<div class="vertical-outer">
+    <div class="vertical-inner">
+        <p>I’m so centered it’s not even funny.</p>
+    </div>
 </div>
 </body>
 </html>
