--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link href="css/index.css" rel="stylesheet">
     <title>Yufei Rusume</title>
     <script src="http://at.alicdn.com/t/font_1255628_4zdfazof698.js"></script>
+    <script src="script/main.js"></script>
     <style type="text/css">
         .icon {
             width: 1em; height: 1em;
@@ -15,13 +16,16 @@
     </style>
 </head>
 <body>
+<div class="loading">
+    <div id="loadingIcon"></div>
+</div>
 <header style="width:100%">
-    <div class="topBar clearfix">
-        <a class="logo" style="float:left;">
+    <div class="topBar">
+        <a class="logo">
             <b><span id="topSpan1">Yufei</span><span id="topSpan2" style="padding-left: 3px">Page</span></b>
         </a>
-        <nav style="float:right;" class="topNavBar">
-            <ul class="clearfix">
+        <nav class="topNavBar">
+            <ul>
                 <li><a href="#">关于</a></li>
                 <li><a href="#">技能</a></li>
                 <li><a href="#">作品</a></li>
@@ -124,7 +128,15 @@
             </div></li>
     </ul>
 </section>
-
+<script>
+    setTimeout(
+        function () {
+            let loadingDiv=document.getElementsByClassName('loading')[0]
+            loadingDiv.parentNode.removeChild(loadingDiv)
+        }
+        ,500
+    )
+</script>
 <section class="Project fixedWindow">
     <h1 class="sectionTitle">作品集</h1>
     <nav>
