--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <link href="css/index.css" rel="stylesheet">
     <title>Yufei Rusume</title>
     <script src="http://at.alicdn.com/t/font_1255628_4zdfazof698.js"></script>
-    <script src="script/main.js"></script>
     <style type="text/css">
         .icon {
-            width: 1em; height: 1em;
+            width: 1em;
+            height: 1em;
             vertical-align: -0.15em;
             fill: currentColor;
             overflow: hidden;
@@ -25,26 +25,46 @@
             <b><span id="topSpan1">Yufei</span><span id="topSpan2" style="padding-left: 3px">Page</span></b>
         </a>
         <nav class="topNavBar">
-            <ul>
-                <li><a href="#">关于</a></li>
-                <li><a href="#">技能</a></li>
-                <li><a href="#">作品</a></li>
-                <li><a href="#">博客</a></li>
-                <li><a href="#">日历</a></li>
-                <li><a href="#">联系方式</a></li>
-                <li><a href="#">其他</a></li>
+            <ul id="topNavBarList">
+                <li><a href="#selfIntroduction">关于</a>
+                    <div id="selfIntroductionABoader" class="aBorder aBorderClick"></div>
+                </li>
+                <li><a href="#skillIntroduction">技能</a>
+                    <div class="aBorder"></div>
+                </li>
+                <li><a href="#projectIntroduction">作品</a>
+                    <div class="aBorder"></div>
+                    <ul class="navMenu">
+                        <li><a href="">作品1</a></li>
+                        <li><a href="">作123品2</a></li>
+                        <li><a href="">作品23</a></li>
+                        <li><a href="">作品4</a></li>
+                        <li><a href="">作品5</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">博客</a>
+                    <div class="aBorder"></div>
+                </li>
+                <li><a href="#">日历</a>
+                    <div class="aBorder"></div>
+                </li>
+                <li><a href="#">联系方式</a>
+                    <div class="aBorder"></div>
+                </li>
+                <li><a href="#">其他</a>
+                    <div class="aBorder"></div>
+                </li>
             </ul>
         </nav>
     </div>
 </header>
-
 <div class="banner"></div>
-<main class="fixedWindow">
+<main id=selfIntroduction class="fixedWindow">
     <div class="profileCard clearfix">
         <div class="picture" style="float: left">
             <img src="image/selfie.png" alt="selfie :)" width="300px">
         </div>
-        <div class="profile" style="float: left">
+        <div id="profile" style="float: left">
             <div class="profile-info">
                 <div class="welcomeIcon">
                     <span>HELLO</span>
@@ -68,8 +88,8 @@
             </div>
         </div>
     </div>
-    <footer>
-        <ul>
+    <footer id="footerLink">
+        <ul id="footerLinkList">
             <li><a href="https://github.com/yufeicheniffy" target="_blank">
                 <svg class="icon" aria-hidden="true">
                     <use xlink:href="#icon-github"></use>
@@ -82,8 +102,8 @@
             </a></li>
             <li><a href="#">
                 <svg class="icon" aria-hidden="true">
-                <use xlink:href="#icon-ins"></use>
-            </svg>
+                    <use xlink:href="#icon-ins"></use>
+                </svg>
             </a></li>
             <li><a href="#">
                 <svg class="icon" aria-hidden="true">
@@ -96,48 +116,47 @@
 <section class="download-resume fixedWindow">
     <div class="download-button">
         <a href="test.html" download>DOWNLOAD RESUME</a>
-        <p>Hello! I’m Robert Smith. Senior Web Developer specializing in front end development. Experienced with all stages of the development cycle for dynamic web projects. Well-versed in numerous programming languages including JavaScript, SQL, and C. Stng background in project management and customer relations.</p>
+        <p>Hello! I’m Robert Smith. Senior Web Developer specializing in front end development. Experienced with all
+            stages of the development cycle for dynamic web projects. Well-versed in numerous programming languages
+            including JavaScript, SQL, and C. Stng background in project management and customer relations.</p>
     </div>
 </section>
-<section class="professionalSkill fixedWindow">
+<section id=skillIntroduction class="professionalSkill fixedWindow">
     <h1 class="sectionTitle">技术栈</h1>
     <ul class="clearfix">
         <li>HTML&CSS
-        <div class="skillBar">
-            <div class="skillBarValue" style="width: 70%"></div>
-        </div></li>
+            <div class="skillBar">
+                <div class="skillBarValue" style="width: 70%"></div>
+            </div>
+        </li>
         <li>JAVASCRIPT
             <div class="skillBar">
                 <div class="skillBarValue" style="width: 80%"></div>
-            </div></li>
+            </div>
+        </li>
         <li>JAVA&PYTHON
             <div class="skillBar">
                 <div class="skillBarValue" style="width: 80%"></div>
-            </div></li>
+            </div>
+        </li>
         <li>MYSQL
             <div class="skillBar">
                 <div class="skillBarValue" style="width: 55%"></div>
-            </div></li>
+            </div>
+        </li>
         <li>MACHINE LEARNING
             <div class="skillBar">
                 <div class="skillBarValue" style="width: 60%"></div>
-            </div></li>
+            </div>
+        </li>
         <li>HTTP
             <div class="skillBar">
                 <div class="skillBarValue" style="width: 70%"></div>
-            </div></li>
+            </div>
+        </li>
     </ul>
 </section>
-<script>
-    setTimeout(
-        function () {
-            let loadingDiv=document.getElementsByClassName('loading')[0]
-            loadingDiv.parentNode.removeChild(loadingDiv)
-        }
-        ,500
-    )
-</script>
-<section class="Project fixedWindow">
+<section id=projectIntroduction class="Project fixedWindow">
     <h1 class="sectionTitle">作品集</h1>
     <nav>
         <ul>
@@ -150,18 +169,18 @@
             </div>
         </div>
         <script>
-            let buttonALL=document.getElementById("buttonAll")
-            let buttonVUE=document.getElementById("buttonVUE")
-            let buttonJS=document.getElementById("buttonJS")
-            let touchBar=document.getElementById("PortfolioTouchBar")
-            buttonALL.onclick=function () {
-                touchBar.className="touchBar-State1"
+            let buttonALL = document.getElementById("buttonAll")
+            let buttonVUE = document.getElementById("buttonVUE")
+            let buttonJS = document.getElementById("buttonJS")
+            let touchBar = document.getElementById("PortfolioTouchBar")
+            buttonALL.onclick = function () {
+                touchBar.className = "touchBar-State1"
             }
-            buttonVUE.onclick=function () {
-                touchBar.className="touchBar-State2"
+            buttonVUE.onclick = function () {
+                touchBar.className = "touchBar-State2"
             }
-            buttonJS.onclick=function () {
-                touchBar.className="touchBar-State3"
+            buttonJS.onclick = function () {
+                touchBar.className = "touchBar-State3"
             }
         </script>
     </nav>
@@ -178,4 +197,15 @@
     </div>
 </section>
 </body>
+<script type='text/javascript' src="script/tween.js"></script>
+<script type='text/javascript' src="script/main.js"></script>
+<script>
+    changeTopBarColor();
+    selfIntroductionActive();
+    elementActive();
+</script>
 </html>
+<script>
+    let loadingDiv = document.getElementsByClassName('loading')[0];
+    loadingDiv.parentNode.removeChild(loadingDiv);
+</script>
