--- a/index.html
+++ b/index.html
@@ -209,8 +209,10 @@
     selfIntroductionActive();
     elementActive();
 </script>
-</html>
+<script src="//cdn.jsdelivr.net/npm/leancloud-storage@3.15.0/dist/av-min.js"></script>
+<script src="script/MessageBoard.js"></script>
 <script>
     let loadingDiv = document.getElementsByClassName('loading')[0];
     loadingDiv.parentNode.removeChild(loadingDiv);
 </script>
+</html>
