change code to MVC model

--- a/index.html
+++ b/index.html
@@ -218,11 +218,7 @@
 </body>
 <script type='text/javascript' src="script/tween.js"></script>
 <script type='text/javascript' src="script/main.js"></script>
-<script>
-    changeTopBarColor();
-    selfIntroductionActive();
-    elementActive();
-</script>
+<script type='text/javascript' src="script/topBar.js"></script>
 <script src="//cdn.jsdelivr.net/npm/leancloud-storage@3.15.0/dist/av-min.js"></script>
 <script src="script/MessageBoard.js"></script>
 <script>
