--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 </main>
 <section class="download-resume fixedWindow">
     <div class="download-button">
-        <a href="test.html" download>DOWNLOAD RESUME</a>
+        <a href="https://yufeicheniffy.github.io/ResumeWithAnimation/" download>DOWNLOAD RESUME</a>
         <p>Hello! I’m Robert Smith. Senior Web Developer specializing in front end development. Experienced with all
             stages of the development cycle for dynamic web projects. Well-versed in numerous programming languages
             including JavaScript, SQL, and C. Stng background in project management and customer relations.</p>
@@ -198,6 +198,15 @@
         <script src="script/slide.js"></script>
         <script>
             let slider1 = new Slide(document.getElementById("slideSection"), animationLib.Slide);
+        </script>
+        <script>
+            let previewLinks=['www.baidu.com','yufeichen.life'];
+            let codeLides=['www.qq,com','www.bilibili.com'];
+            let imgs=Array.from(document.querySelectorAll('.slideWindow > img'));
+            for (let img of imgs){
+                img.
+            }
+
         </script>
     </section>
 </section>
