add mario project

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <main id=selfIntroduction class="fixedWindow">
     <div class="profileCard clearfix">
         <div class="picture" style="float: left">
-            <img src="image/selfie.png" alt="selfie :)" width="300px">
+            <img src="image/Yufei.jpeg" alt="selfie :)" width="300px">
         </div>
         <div id="profile" style="float: left">
             <div class="profile-info">
@@ -118,9 +118,9 @@
 <section class="download-resume fixedWindow">
     <div class="download-button">
         <a href="https://yufeicheniffy.github.io/ResumeWithAnimation/" target="_blanksss">DOWNLOAD RESUME</a>
-        <p>Hello! I’m Robert Smith. Senior Web Developer specializing in front end development. Experienced with all
+        <p>Hello! I’m Yufei Chen. Senior Web Developer specializing in front end development. Experienced with all
             stages of the development cycle for dynamic web projects. Well-versed in numerous programming languages
-            including JavaScript, SQL, and C. Stng background in project management and customer relations.</p>
+            including JavaScript, Java and Python. Also, I have a strong background in data science.</p>
     </div>
 </section>
 <section id=skillIntroduction class="professionalSkill fixedWindow">
@@ -194,6 +194,7 @@
                 <img src="image/resume.jpg" alt="Resume with animation">
                 <img src="image/feiUI.jpg" alt="fei UI">
                 <img src="image/shareBlog.jpg" alt="shareBlog">
+                <img src="image/Mario.jpg" alt="shareBlog">
             </div>
         </div>
         <script src="script/anime.min.js"></script>
@@ -206,7 +207,8 @@
                 {name:'draw board',previewLink:'https://yufeicheniffy.github.io/canvasProject/index.html',codeLink:'https://github.com/yufeicheniffy/canvasProject'},
                 {name:'resume',previewLink: 'https://yufeicheniffy.github.io/ResumeWithAnimation/',codeLink: 'https://github.com/yufeicheniffy/ResumeWithAnimation'},
                 {name:'feiUI',previewLink:'',codeLink:'https://github.com/yufeicheniffy/FeiUI'},
-                {name:'shareBlog',previewLink:'',codeLink:'https://github.com/yufeicheniffy/ShareBlog'}
+                {name:'shareBlog',previewLink:'',codeLink:'https://github.com/yufeicheniffy/ShareBlog'},
+                {name:'drawMario',previewLink:'https://yufeicheniffy.github.io/DrawMario/',codeLink:'https://github.com/yufeicheniffy/DrawMario'}
             ];
             let imgs=Array.from(document.querySelectorAll('.slideWindow > img'));
             let pumpWindows=Array.from([]);
